REFACTOR: Improved stuff ....

--- a/Security/Security.csproj
+++ b/Security/Security.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Serilog" Version="4.2.1-dev-02337" />
+  </ItemGroup>
+
 </Project>
